--- a/module3-sol/style.css
+++ b/module3-sol/style.css
@@ -20,12 +20,12 @@ body{
 
 .center{
 	width: 90%;
-	background-color: grey;
+	background-color: lightseagreen;
 
 }
 .container
 {
-	background-color: grey;
+	background-color: lightseagreen;
 }
 .text-center{
 	font-size: 30px;
